# VCC-UDS3

./: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  COMMIT_MESSAGE_PHASE3.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT.md  DOCUMENTATION_CONSOLIDATION_README.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_GAP_ANALYSIS.md  DOCUMENTATION_IMPLEMENTATION_GUIDE.md  ENTWICKLUNGSSTRATEGIE.md  GITHUB_RELEASE_v2.3.0.md  GIT_COMMIT_COMMANDS.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  NEXT_SESSION_TODO10.md  NEXT_SESSION_TODO7.md  PYPI_RELEASE_GUIDE.md  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_v1.4.0.md  ROADMAP.md  SECURITY_AUDIT.md  STREAMING_SAGA_CONSISTENCY_ANALYSIS.md  TASK_6_RAG_TESTS_BENCHMARKS_COMPLETE.md  TASK_8_MULTI_DB_INTEGRATION_COMPLETE.md  TODO10_COMPLETE_SUMMARY.md  TODO11_COMPLETE_SUMMARY.md  TODO12_COMPLETE_SUMMARY.md  TODO13_COMPLETE_SUMMARY.md  TODO15_IMPLEMENTATION_SUMMARY.md  UDS3_IMPLEMENTATION_COMPLETE.md  __init__.py  __main__.py  adaptive_multi_db_strategy.py  add_file_headers.py  bandit_rescan.txt  benchmark_rag_performance.py  (+88 more)
.github/: instructions
api/: __init__.py  crud.py  crud_strategies.py  database.py  file_filter.py  filters.py  geo.py  geo_config.json  graph_filter.py  manager.py  naming.py  naming_integration.py  parser_base.py  petrinet.py  query.py  relational_filter.py  search.py  vector_filter.py  workflow.py
archive/: ARCHIVE_README.md  README_ARCHIVE.md  README_GEO_MODULES.md  uds3_api_backend.py  uds3_core_geo.py  uds3_enhanced_schema.py  uds3_schemas.py  uds3_vpb_schema.py
compliance/: __init__.py  adapter.py  ai_ethics_committee.py  bias_monitoring.py  data_classification.py  dsgvo_core.py  eu_ai_act.py  identity_service.py  security_quality.py
core/: __init__.py  cache.py  database.py  embeddings.py  framework.py  llm_ollama.py  metrics.py  polyglot_manager.py  rag_async.py  rag_cache.py  rag_pipeline.py  relations.py  schemas.py
database/: CONNECTION_POOL_README.md  README_SAGA_STEP_BUILDERS.md  __init__.py  adapter_governance.py  adaptive_batch_processor.py  batch_operations.py  config.py  connection_pool.py  database_api.py  database_api_base.py  database_api_chromadb.py  database_api_chromadb_remote.py  database_api_couchdb.py  database_api_file_storage.py  database_api_keyvalue_postgresql.py  database_api_neo4j.py  database_api_postgresql.py  database_api_postgresql_pooled.py  database_api_sqlite.py  database_config_local.py.example  database_exceptions.py  database_manager.py  db_migrations.py  extensions.py  multi_hop.py  requirements.txt  saga_compensations.py  saga_crud.py  saga_error_recovery.py  (+4 more)
(+536 files in other folders)
